[package]
name = "z4_runner"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serenity = { version = "0.12.2", features = ["unstable_discord_api"] }
tokio = { version = "1.38.0", features = ["rt-multi-thread"] }
